--- a/public/app/channel-main.html
+++ b/public/app/channel-main.html
@@ -10,12 +10,37 @@
   <script src="/js/vue-1.0.26.min.js"></script>
 
   <script>
-  var response = [];
+  var vue_template = {};
+
+  // 主题的模版
+  vue_template["category"] = "<div class=\"category\"><ul><li v-for=\"category in categorys\">{{ category.name }}</li></ul></div>";
+
+  // 页面内模块
+  vue_template["tiles"] = {
+    // 幻灯片
+    "slide" : "<div class=\"slide\"></div>",
+    // 宽屏幻灯片
+    "wide-slide" : "<div class=\"wide-slide\"></div>",
+    // 主题
+    "topic" : "<div class=\"topic\"></div>",
+    // 2 个主题
+    "two-topic" : "<div class=\"topic\"><ul><li v-for=\"topic in topics\">{{ topic.icon }}</li></ul></div>",
+    // 3 个主题
+    "three-topic" : "<div class=\"topic\"><ul><li v-for=\"topic in topics\">{{ topic.icon }}</li></ul></div>",
+    // 4 个主题
+    "four-topic" : "<div class=\"topic\"><ul><li v-for=\"topic in topics\">{{ topic.icon }}</li></ul></div>",
+    // 图片
+    "media" : "<div class=\"wide-slide\"></div>",
+  };
   </script>
 
-  <title></title>
+  <title>-</title>
   </head>
   <body>
+
+  <script>
+  var init_response = 
+  </script>
 
   </body>
 </html>
