--- a/public/app/channel-main.html
+++ b/public/app/channel-main.html
@@ -38,9 +38,15 @@
   </head>
   <body>
 
-  <script>
-  var init_response = 
-  </script>
+  <div class="category">
+    <ul>
+      <li>中国</li>
+      <li>北京</li>
+      <li>政治</li>
+      <li>西直门</li>
+      <li>万科</li>
+    </ul>
+  </div>
 
   </body>
 </html>
